@@ -6,12 +6,12 @@ import com.sparrowwallet.drongo.KeyPurpose;
 import com.sparrowwallet.drongo.Network;
 import com.sparrowwallet.drongo.SecureString;
 import com.sparrowwallet.drongo.address.Address;
-import com.sparrowwallet.drongo.address.InvalidAddressException;
 import com.sparrowwallet.drongo.bip47.PaymentCode;
 import com.sparrowwallet.drongo.bip47.SecretPoint;
 import com.sparrowwallet.drongo.crypto.ECKey;
 import com.sparrowwallet.drongo.protocol.*;
 import com.sparrowwallet.drongo.psbt.PSBT;
+import com.sparrowwallet.drongo.silentpayments.SilentPayment;
 import com.sparrowwallet.drongo.wallet.*;
 import com.sparrowwallet.sparrow.*;
 import com.sparrowwallet.sparrow.control.*;
@@ -172,7 +172,7 @@ public class SendController extends WalletFormController implements Initializabl
 
     private final Set<WalletNode> excludedChangeNodes = new HashSet<>();
 
-    private final Map<Wallet, Map<Address, WalletNode>> addressNodeMap = new HashMap<>();
+    private final Map<Address, WalletNode> walletAddresses = new HashMap<>();
 
     private final ChangeListener<String> feeListener = new ChangeListener<>() {
         @Override
@@ -484,7 +484,6 @@ public class SendController extends WalletFormController implements Initializabl
         validationSupport.setValidationDecorator(new StyleClassValidationDecoration());
         validationSupport.registerValidator(fee, Validator.combine(
                 (Control c, String newValue) -> ValidationResult.fromErrorIf( c, "Insufficient Inputs", userFeeSet.get() && insufficientInputsProperty.get()),
-                (Control c, String newValue) -> ValidationResult.fromErrorIf( c, "Insufficient Fee", getFeeValueSats() != null && getFeeValueSats() == 0),
                 (Control c, String newValue) -> ValidationResult.fromErrorIf( c, "Insufficient Fee Rate", isInsufficientFeeRate())
         ));
 
@@ -606,18 +605,25 @@ public class SendController extends WalletFormController implements Initializabl
         try {
             List<Payment> payments = transactionPayments != null ? transactionPayments : getPayments();
             updateOptimizationButtons(payments);
-            if(!userFeeSet.get() || (getFeeValueSats() != null && getFeeValueSats() > 0)) {
+            if(!userFeeSet.get() || getFeeValueSats() != null) {
                 Wallet wallet = getWalletForm().getWallet();
                 Long userFee = userFeeSet.get() ? getFeeValueSats() : null;
                 double feeRate = getUserFeeRate();
+                double minRelayFeeRate = AppServices.getMinimumRelayFeeRate();
                 Integer currentBlockHeight = AppServices.getCurrentBlockHeight();
                 boolean groupByAddress = Config.get().isGroupByAddress();
                 boolean includeMempoolOutputs = Config.get().isIncludeMempoolOutputs();
                 BlockTransaction replacedTransaction = replacedTransactionProperty.get();
 
-                walletTransactionService = new WalletTransactionService(addressNodeMap, wallet, getUtxoSelectors(payments), getTxoFilters(),
+                //Disable RBF for silent payments, as we can't guarantee RBF won't be attempted on another device without knowledge to recompute the address if necessary
+                boolean allowRbf = (replacedTransaction == null || replacedTransaction.getTransaction().isReplaceByFee())
+                        && payments.stream().noneMatch(payment -> payment instanceof SilentPayment);
+
+                TransactionParameters params = new TransactionParameters(getUtxoSelectors(payments), getTxoFilters(),
                         payments, opReturnsList, excludedChangeNodes,
-                        feeRate, getMinimumFeeRate(), userFee, currentBlockHeight, groupByAddress, includeMempoolOutputs, replacedTransaction);
+                        feeRate, getMinimumFeeRate(), minRelayFeeRate, userFee,
+                        currentBlockHeight, groupByAddress, includeMempoolOutputs, allowRbf);
+                walletTransactionService = new WalletTransactionService(wallet, params, replacedTransaction);
                 walletTransactionService.setOnSucceeded(event -> {
                     if(!walletTransactionService.isIgnoreResult()) {
                         walletTransactionProperty.setValue(walletTransactionService.getValue());
@@ -652,12 +658,12 @@ public class SendController extends WalletFormController implements Initializabl
 
                 walletTransactionService.start();
             }
-        } catch(InvalidAddressException | IllegalStateException e) {
+        } catch(IllegalStateException e) {
             walletTransactionProperty.setValue(null);
         }
     }
 
-    private List<UtxoSelector> getUtxoSelectors(List<Payment> payments) throws InvalidAddressException {
+    private List<UtxoSelector> getUtxoSelectors(List<Payment> payments) {
         if(utxoSelectorProperty.get() != null) {
             return List.of(utxoSelectorProperty.get());
         }
@@ -679,39 +685,14 @@ public class SendController extends WalletFormController implements Initializabl
     }
 
     private static class WalletTransactionService extends Service<WalletTransaction> {
-        private final Map<Wallet, Map<Address, WalletNode>> addressNodeMap;
         private final Wallet wallet;
-        private final List<UtxoSelector> utxoSelectors;
-        private final List<TxoFilter> txoFilters;
-        private final List<Payment> payments;
-        private final List<byte[]> opReturns;
-        private final Set<WalletNode> excludedChangeNodes;
-        private final double feeRate;
-        private final double longTermFeeRate;
-        private final Long fee;
-        private final Integer currentBlockHeight;
-        private final boolean groupByAddress;
-        private final boolean includeMempoolOutputs;
+        private final TransactionParameters params;
         private final BlockTransaction replacedTransaction;
         private boolean ignoreResult;
 
-        public WalletTransactionService(Map<Wallet, Map<Address, WalletNode>> addressNodeMap,
-                                        Wallet wallet, List<UtxoSelector> utxoSelectors, List<TxoFilter> txoFilters,
-                                        List<Payment> payments, List<byte[]> opReturns, Set<WalletNode> excludedChangeNodes,
-                                        double feeRate, double longTermFeeRate, Long fee, Integer currentBlockHeight, boolean groupByAddress, boolean includeMempoolOutputs, BlockTransaction replacedTransaction) {
-            this.addressNodeMap = addressNodeMap;
+        public WalletTransactionService(Wallet wallet, TransactionParameters params, BlockTransaction replacedTransaction) {
             this.wallet = wallet;
-            this.utxoSelectors = utxoSelectors;
-            this.txoFilters = txoFilters;
-            this.payments = payments;
-            this.opReturns = opReturns;
-            this.excludedChangeNodes = excludedChangeNodes;
-            this.feeRate = feeRate;
-            this.longTermFeeRate = longTermFeeRate;
-            this.fee = fee;
-            this.currentBlockHeight = currentBlockHeight;
-            this.groupByAddress = groupByAddress;
-            this.includeMempoolOutputs = includeMempoolOutputs;
+            this.params = params;
             this.replacedTransaction = replacedTransaction;
         }
 
@@ -722,16 +703,17 @@ public class SendController extends WalletFormController implements Initializabl
                     try {
                         return getWalletTransaction();
                     } catch(InsufficientFundsException e) {
-                        if(e.getTargetValue() != null && replacedTransaction != null && utxoSelectors.size() == 1 && utxoSelectors.get(0) instanceof PresetUtxoSelector presetUtxoSelector) {
+                        if(e.getTargetValue() != null && replacedTransaction != null && wallet.isSafeToAddInputsOrOutputs(replacedTransaction)
+                                && params.utxoSelectors().size() == 1 && params.utxoSelectors().getFirst() instanceof PresetUtxoSelector presetUtxoSelector) {
                             //Creating RBF transaction - include additional UTXOs if available to pay desired fee
-                            List<TxoFilter> filters = new ArrayList<>(txoFilters);
+                            List<TxoFilter> filters = new ArrayList<>(params.txoFilters());
                             filters.add(presetUtxoSelector.asExcludeTxoFilter());
-                            List<OutputGroup> outputGroups = wallet.getGroupedUtxos(filters, feeRate, AppServices.getMinimumRelayFeeRate(), Config.get().isGroupByAddress())
+                            List<OutputGroup> outputGroups = wallet.getGroupedUtxos(filters, params.feeRate(), AppServices.getMinimumRelayFeeRate(), Config.get().isGroupByAddress())
                                     .stream().filter(outputGroup -> outputGroup.getEffectiveValue() >= 0).collect(Collectors.toList());
                             Collections.shuffle(outputGroups);
 
                             while(!outputGroups.isEmpty() && presetUtxoSelector.getPresetUtxos().stream().mapToLong(BlockTransactionHashIndex::getValue).sum() < e.getTargetValue()) {
-                                OutputGroup outputGroup = outputGroups.remove(0);
+                                OutputGroup outputGroup = outputGroups.removeFirst();
                                 for(BlockTransactionHashIndex utxo : outputGroup.getUtxos()) {
                                     presetUtxoSelector.getPresetUtxos().add(utxo);
                                 }
@@ -745,12 +727,12 @@ public class SendController extends WalletFormController implements Initializabl
                 }
 
                 private WalletTransaction getWalletTransaction() throws InsufficientFundsException {
-                    updateMessage("Selecting UTXOs...");
-                    WalletTransaction walletTransaction = wallet.createWalletTransaction(utxoSelectors, txoFilters, payments, opReturns, excludedChangeNodes,
-                            feeRate, longTermFeeRate, fee, currentBlockHeight, groupByAddress, includeMempoolOutputs);
-                    updateMessage("Deriving keys...");
-                    walletTransaction.updateAddressNodeMap(addressNodeMap, walletTransaction.getWallet());
-                    return walletTransaction;
+                    try {
+                        updateMessage("Selecting UTXOs...");
+                        return wallet.createWalletTransaction(params);
+                    } finally {
+                        updateMessage("");
+                    }
                 }
             };
         }
@@ -878,7 +860,7 @@ public class SendController extends WalletFormController implements Initializabl
      * @return the fee rate to use when constructing a transaction
      */
     public Double getUserFeeRate() {
-        return (userFeeSet.get() ? Transaction.DEFAULT_MIN_RELAY_FEE : getFeeRate());
+        return (userFeeSet.get() ? AppServices.getMinimumRelayFeeRate() : getFeeRate());
     }
 
     public Double getFeeRate() {
@@ -942,7 +924,6 @@ public class SendController extends WalletFormController implements Initializabl
 
     private void setFeeRatePriority(Double feeRateAmt) {
         Map<Integer, Double> targetBlocksFeeRates = getTargetBlocksFeeRates();
-        Integer targetBlocks = getTargetBlocks(feeRateAmt);
         if(targetBlocksFeeRates.get(Integer.MAX_VALUE) != null) {
             Double minFeeRate = targetBlocksFeeRates.get(Integer.MAX_VALUE);
             if(minFeeRate > 1.0 && feeRateAmt < minFeeRate) {
@@ -963,9 +944,10 @@ public class SendController extends WalletFormController implements Initializabl
             }
         }
 
+        Integer targetBlocks = getTargetBlocks(feeRateAmt);
         if(targetBlocks != null) {
             if(targetBlocks < FeeRatesSource.BLOCKS_IN_HALF_HOUR) {
-                Double maxFeeRate = FEE_RATES_RANGE.get(FEE_RATES_RANGE.size() - 1).doubleValue();
+                Double maxFeeRate = AppServices.getFeeRatesRange().getLast();
                 Double highestBlocksRate = targetBlocksFeeRates.get(TARGET_BLOCKS_RANGE.get(0));
                 if(highestBlocksRate < maxFeeRate && feeRateAmt > (highestBlocksRate + ((maxFeeRate - highestBlocksRate) / 10))) {
                     feeRatePriority.setText("Overpaid");
@@ -1115,7 +1097,7 @@ public class SendController extends WalletFormController implements Initializabl
 
         paymentCodeProperty.set(null);
 
-        addressNodeMap.clear();
+        walletAddresses.clear();
     }
 
     public UtxoSelector getUtxoSelector() {
@@ -1193,11 +1175,18 @@ public class SendController extends WalletFormController implements Initializabl
         WalletTransaction walletTransaction = walletTransactionProperty.get();
         Set<WalletNode> nodes = new LinkedHashSet<>(walletTransaction.getSelectedUtxos().values());
         nodes.addAll(walletTransaction.getChangeMap().keySet());
-        Map<Address, WalletNode> addressNodeMap = walletTransaction.getAddressNodeMap();
-        nodes.addAll(addressNodeMap.values().stream().filter(Objects::nonNull).collect(Collectors.toList()));
+        nodes.addAll(walletTransaction.getWalletNodePayments().stream().map(WalletNodePayment::getWalletNode).collect(Collectors.toList()));
 
         //All wallet nodes applicable to this transaction are stored so when the subscription status for one is updated, the history for all can be fetched in one atomic update
         walletForm.addWalletTransactionNodes(nodes);
+    }
+
+    public WalletNode getWalletNode(Address address) {
+        if(walletAddresses.isEmpty()) {
+            walletAddresses.putAll(getWalletForm().getWallet().getWalletAddresses());
+        }
+
+        return walletAddresses.get(address);
     }
 
     public void broadcastNotification(ActionEvent event) {
@@ -1243,11 +1232,14 @@ public class SendController extends WalletFormController implements Initializabl
             List<UtxoSelector> utxoSelectors = List.of(new PresetUtxoSelector(walletTransaction.getSelectedUtxos().keySet(), true, false));
             Long userFee = userFeeSet.get() ? getFeeValueSats() : null;
             double feeRate = getUserFeeRate();
+            Double minRelayFeeRate = AppServices.getMinimumRelayFeeRate();
             Integer currentBlockHeight = AppServices.getCurrentBlockHeight();
             boolean groupByAddress = Config.get().isGroupByAddress();
             boolean includeMempoolOutputs = Config.get().isIncludeMempoolOutputs();
 
-            WalletTransaction finalWalletTx = decryptedWallet.createWalletTransaction(utxoSelectors, getTxoFilters(), walletTransaction.getPayments(), List.of(blindedPaymentCode), excludedChangeNodes, feeRate, getMinimumFeeRate(), userFee, currentBlockHeight, groupByAddress, includeMempoolOutputs);
+            TransactionParameters params = new TransactionParameters(utxoSelectors, getTxoFilters(), walletTransaction.getPayments(), List.of(blindedPaymentCode),
+                    excludedChangeNodes, feeRate, getMinimumFeeRate(), minRelayFeeRate, userFee, currentBlockHeight, groupByAddress, includeMempoolOutputs, true);
+            WalletTransaction finalWalletTx = decryptedWallet.createWalletTransaction(params);
             PSBT psbt = finalWalletTx.createPSBT();
             decryptedWallet.sign(psbt);
             decryptedWallet.finalise(psbt);
@@ -1506,7 +1498,7 @@ public class SendController extends WalletFormController implements Initializabl
             notificationButton.setVisible(isNotificationTransaction);
             notificationButton.setDefaultButton(isNotificationTransaction);
 
-            setInputFieldsDisabled(isNotificationTransaction, false);
+            setInputFieldsDisabled(!event.allowPaymentChanges(), false);
         }
     }
 
@@ -1635,18 +1627,32 @@ public class SendController extends WalletFormController implements Initializabl
         recentBlocksView.updateFeeRatesSource(event.getFeeRateSource());
     }
 
+    @Subscribe
+    public void connection(ConnectionEvent event) {
+        if(!Objects.equals(event.getMinimumRelayFeeRate(), event.getPreviousMinimumRelayFeeRate())) {
+            feeRange.updateFeeRange(event.getMinimumRelayFeeRate(), event.getPreviousMinimumRelayFeeRate());
+            updateTransaction();
+        }
+    }
+
+    @Subscribe
+    public void hideAmountsStatusChanged(HideAmountsStatusEvent event) {
+        updateTransaction();
+        fiatFeeAmount.refresh();
+    }
+
     private class PrivacyAnalysisTooltip extends VBox {
         private final List<Label> analysisLabels = new ArrayList<>();
 
         public PrivacyAnalysisTooltip(WalletTransaction walletTransaction) {
             List<Payment> payments = walletTransaction.getPayments();
             List<Payment> userPayments = payments.stream().filter(payment -> payment.getType() != Payment.Type.FAKE_MIX).collect(Collectors.toList());
-            Map<Address, WalletNode> walletAddresses = walletTransaction.getAddressNodeMap();
+            List<WalletNodePayment> walletNodePayments = walletTransaction.getWalletNodePayments();
             OptimizationStrategy optimizationStrategy = getPreferredOptimizationStrategy();
             boolean fakeMixPresent = payments.stream().anyMatch(payment -> payment.getType() == Payment.Type.FAKE_MIX);
             boolean roundPaymentAmounts = userPayments.stream().anyMatch(payment -> payment.getAmount() % 100 == 0);
             boolean mixedAddressTypes = userPayments.stream().anyMatch(payment -> payment.getAddress().getScriptType() != getWalletForm().getWallet().getFreshNode(KeyPurpose.RECEIVE).getAddress().getScriptType());
-            boolean addressReuse = userPayments.stream().anyMatch(payment -> walletAddresses.get(payment.getAddress()) != null && !walletAddresses.get(payment.getAddress()).getTransactionOutputs().isEmpty());
+            boolean addressReuse = walletNodePayments.stream().anyMatch(walletNodePayment -> !walletNodePayment.getWalletNode().getTransactionOutputs().isEmpty());
             boolean payjoinPresent = userPayments.stream().anyMatch(payment -> AppServices.getPayjoinURI(payment.getAddress()) != null);
 
             if(optimizationStrategy == OptimizationStrategy.PRIVACY) {
